Tue Feb 16 17:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Additions provided by mgiddings@ypc.net -
	* Headers/AppKit/NSNibDeclarations.h: New file
	* Headers/AppKit/AppKit.h: Added NSNibDeclarations.h
	* Source/GNUmakefile: Added NSNibDeclarations.h

Tue Feb 16 10:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gpbs.m: Improve handling of loss of connections - don't remove
	data from a pasteboard unless it was owned by the connection lost.
	* Source/NSPanel.m: Override NSWindows initDefaults to make sure
	panels aren't shown in windows menu by default.
	* Source/NSApplication.m: Make NSApp a global variable.
	* Source/NSPasteboard.m: Fix recursivre dealloc.
	* Headers/AppKit/NSApplication.h: Make NSApp a global variable.

Tue Feb 16  5:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Optimise coordinate conversion.
	* Headers/AppKit/PSMatrix.h: ditto

1999-02-15 Michael Hanni <mhanni@sprintmail.com>

	* Source/NSBox.m Source/NSButtonCell.m Source/NSCell.m
	Source/NSColorWell.m Source/NSMatrix.m Source/NSPrintInfo.m
	Source/NSScroller.m Source/NSSliderCell.m: fixed compilation
	warnings by including proper includes.

	* Tools/Functions.m: Defined NSRectClip(). Fixes fatal linking
	errors in Tools/

Mon Feb 15 12:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBrowserCell.m: Code by Benhur to handle flipped views
	* Source/NSButtonCell.m: ditto
	* Source/NSCell.m: ditto
	* Source/NSScrollView.m: ditto

1999-02-13 Michael Hanni <mhanni@sprintmail.com>

	* Small change to gui/Tools/GNUmakefile.preamble to allow for easy
	  linking on FreeBSD 3.x. (added -ljpeg)

Fri Feb 12 21:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Tidied some more.
	* Source/NSText.m: Don't use display - use setNeedsDisplay: instead
	so that drawing gets done automatically.

Fri Feb 12 16:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>